logs/abouttag.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/abouttag'...
Compiling './lib/python3.5/site-packages/abouttag/at.py'...
***   File "./lib/python3.5/site-packages/abouttag/at.py", line 3
    print get_about_tag_for_item('http://www.amazon.com/Renbourn-Stefan-Grossman-Live-Concert/dp/B000000E8R/ref=sr_1_7?ie=UTF8&qid=1308066155&sr=8-7')
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/abouttag/ubook.py'...
***   File "./lib/python3.5/site-packages/abouttag/ubook.py", line 7
    print "Form: python ubook.py 'Title of Book', 'Book Author'"
                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/abouttag-1.2.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urlnorm-1.1.4.egg-info'...
Compiling './lib/python3.5/site-packages/urlnorm.py'...
***   File "./lib/python3.5/site-packages/urlnorm.py", line 206
    MAX_IP = 0xffffffffL
                       ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
